Use Vanniktech plugin to publish